Small edits to index.qmd

--- a/posts/2023-07-31-openscapes-website/index.qmd
+++ b/posts/2023-07-31-openscapes-website/index.qmd
@@ -37,7 +37,7 @@ knitr::include_graphics("media/old_site.png")
 *A screenshot of the old Openscapes website's landing page, built using blogdown.*
 :::
 
-Unfortunately, because of changes to Hugo [CHECK WITH JULIE/STEF ABOUT THIS], the site could no longer build locally (i.e. you couldn't preview the site on a personal computer). This meant that the site needed to be redeployed in order to view any changes. Not only was this a rather slow process, but it also meant that there was no easy way to test out new additions/pages/features (or even check for typos) before sharing those updates with the rest of the online world. 
+Unfortunately, upgrades to Hugo were beyond Julie's scope to maintain which meant the site could no longer build locally (i.e. you couldn't preview the site on a personal computer). This meant that the site needed to be redeployed in order to view any changes. Not only was this a rather slow process, but it also meant that there was no easy way to test out new additions/pages/features (or even check for typos) before sharing those updates with the rest of the online world. 
 Additionally, the Openscapes team has used Quarto since its earliest days (read more about that in their [quarto blog posts](https://openscapes.org/blog.html#category=quarto)) -- it seemed like a good time as any to begin using this same tool for building the Openscapes website as well.
 
 ## **Pause:** Why me?
@@ -53,7 +53,7 @@ Despite the fact that I was leading the charge on most of the technical aspects 
 Steps for porting the website generally looked like this:
 
 1. **Recreate as much of the website as possible:** I created a Quarto website that looked as close as possible to the original blogdown site -- this meant getting the main website pages and blog content moved over without much fussing. The most challenging part was creating a custom landing page that both matched the aesthetics of the blogdown site *and* that looked good on smaller viewports/mobile devices -- this ended up being the last thing I addressed before wrapping up the project. *Ultimately, I was able to recreate a Quarto-based Openscapes website that looked nearly identical to the blogdown version -- it was really cool to see how flexible Quarto allows you to be!*
-2. **Incorporate events:** Openscapes Events were historically announced through a separate [Events blog](https://openscapes.github.io/events/), which we decided to incorporate fully into the Openscapes website on it's own [events listing](https://openscapes.org/events).
+2. **Incorporate events:** Openscapes Events were historically announced through a separate [Events blog](https://openscapes.github.io/events/), which we decided to incorporate fully into the Openscapes website on its own [events listing](https://openscapes.org/events).
 3. **Feedback & updates:** Stef and Julie did multiple deep dive reviews of the website and I made changes based off their suggestions/requests. Some of these were minor (e.g. "Can we add a bit more vertical space in underlined text", "this hyperlinked text is broken"), while others required a bit more thought (e.g. "let's rethink how we structure content on this page", figuring out CSS to style particular page elements). They *also* had the chance to share the website with a focus group, which provided invaluable feedback on content organization, language, etc. (e.g. "remove unnecessary text from the landing page", "replace the words *instructional materials* with *curriculum*")
 4. **More feedback & updates:** The hardest part and also the most fun part was the back-and-forth discussion on how to rethink, try out, and change the website. We fiddled a lot with content reorganization and CSS styling to better highlight different resources/elements. It was a super collaborative and iterative process to get things to where they are now!
 5. **Figure out responsive web pages:** I saved the most technically challenging part (at least for me) for last -- learning how to create responsive web pages (where content adjusts size and positioning based on viewport size) involved a lot of trial and error.
@@ -151,7 +151,7 @@ right-hand column content
 
 where `{.g-col-4}` defines the width of the column (Bootstrap's grid system has a total of 12 columns across a page, so each of our 3 columns will be a width of 4). 
 
-I got stuck for a long while after this point -- the [CSS Grid documenation](https://getbootstrap.com/docs/5.1/layout/css-grid/) makes it clear that this approach can be used to create responsive columns, but I found the [provided example](https://getbootstrap.com/docs/5.1/layout/css-grid/#responsive) to be a bit confusing. After *a lot* of trial and error, and stumbling across [this table](https://getbootstrap.com/docs/4.0/layout/grid/#grid-options) that (sort of) makes reference to `.g-col` vs. `.g-col-md` classes from the [CSS Grid documentation example](https://getbootstrap.com/docs/5.1/layout/css-grid/#responsive), I eventually got myself some working responsive columns. While I still don't fully understand it, this is my best attempt at explaining my working solution...here's what it looks like:
+I got stuck for a long while after this point -- the [CSS Grid documentation](https://getbootstrap.com/docs/5.1/layout/css-grid/) makes it clear that this approach can be used to create responsive columns, but I found the [provided example](https://getbootstrap.com/docs/5.1/layout/css-grid/#responsive) to be a bit confusing. After *a lot* of trial and error, and stumbling across [this table](https://getbootstrap.com/docs/4.0/layout/grid/#grid-options) that (sort of) makes reference to `.g-col` vs. `.g-col-md` classes from the [CSS Grid documentation example](https://getbootstrap.com/docs/5.1/layout/css-grid/#responsive), I eventually got myself some working responsive columns. While I still don't fully understand it, this is my best attempt at explaining my working solution...here's what it looks like:
 
 ```{md}
 ::: {.grid}
