--- a/posts/2023-07-31-openscapes-website/index.qmd
+++ b/posts/2023-07-31-openscapes-website/index.qmd
@@ -18,6 +18,8 @@ Y'all, I did something really exciting -- I built another website! This time as 
 
 There are so many amazing things I could say about this process and experience, but I'd be writing a novel. Instead, I'm going to do some high-level reflection and focus a bit on the parts of the process that I enjoyed the most. 
 
+<div class="quote-text-bg">**TL;DR** I rebuilt the [Openscapes website](https://openscapes.org/) using [Quarto](https://quarto.org/) and documented a lot of what I learned and how I did it in the website's [GitHub Wiki](https://github.com/Openscapes/website-new/wiki). This was not only a super helpful practice for me in my own open science learning journey, but also for the Openscapes team as they take over continued maintenance of the site. I reflect on some of the most memorable moments of my first freelancing adventure, including creating responsive web pages, learning regex, and how open communication, collaboration, and cheering each other on can make any daunting task more approachable.</div>
+
 ## **Task:** Port the Openscapes website from blogdown to Quarto
 
 To start, what does **port** mean? While it may be obvious to some, I feel like this word is sort of jargon-y. I first learned of it when [Quarto](https://quarto.org/) was thrust into the spotlight and the R community at large began *"porting their websites from distill/blogdown/etc to Quarto"*. I came to understand that (at least in this context) "port" means "to convert or migrate" a website from one framework to another (or in other words, rebuild a website using different tools).
@@ -53,6 +55,20 @@ Despite the fact that I was leading the charge on most of the technical aspects 
 Steps for porting the website generally looked like this:
 
 1. **Recreate as much of the website as possible:** I created a Quarto website that looked as close as possible to the original blogdown site -- this meant getting the main website pages and blog content moved over without much fussing. The most challenging part was creating a custom landing page that both matched the aesthetics of the blogdown site *and* that looked good on smaller viewports/mobile devices -- this ended up being the last thing I addressed before wrapping up the project. *Ultimately, I was able to recreate a Quarto-based Openscapes website that looked nearly identical to the blogdown version -- it was really cool to see how flexible Quarto allows you to be!*
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: center
+#| out-width: "85%" 
+#| fig-alt: "The new Openscapes website landing page, built with blogdown. A banner image reads \"OPENSCAPES Let's do better science in less time together\" on top of a grassy landscape drawing with trees, deer, a raccoon, and a fox. A condor soars overhead and blue mountains stretch across the background. Below the banner reads the header, \"WHAT WE DO\" underlined in blue"
+knitr::include_graphics("media/new-site.png")
+```
+
+::: {.small-text .center-text .dark-gray-text}
+*A screenshot of the new Openscapes website's landing page, built using Quarto! We were able to recreate the landing page so that it looked pretty darn similar to the blogdown site.*
+:::
+
 2. **Incorporate events:** Openscapes Events were historically announced through a separate [Events blog](https://openscapes.github.io/events/), which we decided to incorporate fully into the Openscapes website on its own [events listing](https://openscapes.org/events).
 3. **Feedback & updates:** Stef and Julie did multiple deep dive reviews of the website and I made changes based off their suggestions/requests. Some of these were minor (e.g. "Can we add a bit more vertical space in underlined text", "this hyperlinked text is broken"), while others required a bit more thought (e.g. "let's rethink how we structure content on this page", figuring out CSS to style particular page elements). They *also* had the chance to share the website with a focus group, which provided invaluable feedback on content organization, language, etc. (e.g. "remove unnecessary text from the landing page", "replace the words *instructional materials* with *curriculum*")
 4. **More feedback & updates:** The hardest part and also the most fun part was the back-and-forth discussion on how to rethink, try out, and change the website. We fiddled a lot with content reorganization and CSS styling to better highlight different resources/elements. It was a super collaborative and iterative process to get things to where they are now!
