--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -9,6 +9,7 @@ author:
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
     affiliation-url: https://ucsb-meds.github.io/ 
 date: 2022-10-24
+date-modified: last-modified
 bibliography: references.bib
 citation: 
   url: https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/
@@ -35,7 +36,7 @@ About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I
 - combat imposter syndrome    
     - *"Once you've shared some analyses and code, you'll probably find that you were underrating yourself in some areas."* -also [`@drob`](https://twitter.com/drob) in his post, [Advice to aspiring data scientists: start a blog](http://varianceexplained.org/r/start-blog/)
 
-Rather than repeat more content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches more reasons why you should blog and provides some ideas on how to structure your blog posts. Before jumping into things, I'll leave you with one last piece of advice from [`@drob`](https://twitter.com/drob):
+Rather than repeat more content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on more reasons why you should blog and provides some ideas on how to structure your blog posts. Before jumping into things, I'll leave you with one last piece of advice from [`@drob`](https://twitter.com/drob):
 
 [^1]: Okay, you don't *just* have to trust me. Lots of data scientists advocate for blogging as an important skill and communication tool. Check out this [blog post](http://varianceexplained.org/r/start-blog/) by [David Robinson](https://twitter.com/drob) to start.
 
@@ -56,11 +57,11 @@ When you've written the same code 3 times, write a function<br><br>When you've g
 ```
 ## I. Before we chat about blogs...
 
-Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) students created the bones of their Quarto websites a few months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
+Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) students created the bones of their Quarto websites a couple months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
 
-`r fontawesome::fa("window-maximize", fill = "#64605f", a11y = "sem")` [Creating your personal website using Quarto](https://ucsb-meds.github.io/creating-quarto-websites/)
+{{< fa window-maximize title="Web browser window">}} [Creating your personal website using Quarto](https://ucsb-meds.github.io/creating-quarto-websites/)
 
-`r fontawesome::fa("palette", fill = "#64605f", a11y = "sem")` [Customizing Quarto Websites: Make your website stand out using Sass & CSS](https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide)
+{{< fa palette title="Painters palette">}} [Customizing Quarto Websites: Make your website stand out using Sass & CSS](https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide)
 
 ## II. What's the difference between a website and a blog?
 
@@ -82,25 +83,29 @@ A Quarto Blog is *a type* of Quarto Website -- according to the Quarto documenta
 
 ## III. Adding a blog to your personal Quarto website
 
-TL;DR: A couple of steps are required for setting up your blog, but generally speaking, you'll need:
+::: {.quote-text-bg}
+**TL;DR:** A couple of steps are required for setting up your blog, but generally speaking, you'll need:
 
-`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a folder (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` **a folder** (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder
 
-`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a listing page, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` **a listing page**, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`
 
-`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` blog posts! Your listing page will be blank until you actually add your first blog post
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` **blog posts!** Your listing page will be blank until you actually add your first blog post
+:::
+
+<br>
 
 Let's create those together now.
 
 1.  **Create a `/posts` folder:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts` (you can call this whatever you want), where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or (b) in the RStudio Terminal, run `mkdir posts`.
 
-2.  ***Optional:*** **Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all):
+2.  ***Optional:*** **Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. Create this one of two ways: **(a)** In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file, or **(b)** click into the `posts/` folder in the Files pane, then click *Blank File* > *Text File* > type `_metadata.yml` > click *OK*. Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all):
 
 [^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear.
 
     The `title-block-banner` option: Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners) (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts.
 
-```{r}
+```{r filename="_metadata.yml"}
 #| eval: false
 #| echo: true
 
@@ -118,28 +123,30 @@ title-block-banner: true
 ```{r}
 #| eval: true
 #| echo: false
-#| fig-cap: "The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page, with multiple blog posts arranged in the default-style layout -- Quarto has multiple listing page layout options (default, grid, table) for you to explore"
+#| fig-cap: "An example listing page from the [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) showing multiple blog posts. While the MEDS website/blog is created using `{distill}`, you can expect something super similar. Quarto has multiple listing page layout options (default -- which looks similar to the MEDS blog, grid, table) for you to explore"
 knitr::include_graphics("media/listing-page.png")
 ```
 
 -   To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* \> *New File* \> *Quarto Document...*. Below, I give mine the title "My Blog" when prompted (this name appears at the top of your listing page), then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
 
-4.  **Configure your listing page:** Specify how you'd like your listing page to be arranged by updating the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
+4.  **Configure your listing page:** Specify how you'd like your listing page to be arranged by updating the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but be sure to check out [other options](https://quarto.org/docs/websites/website-listings.html):
 
-```{r}
+```{md filename="posts.qmd"}
 #| eval: false
 #| echo: true
+---
 title: "My Blog"
 listing: 
   contents: posts # all Quarto docs in the `posts` directory will be included on your listing page
   type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
+---
 ```
 
 5.  **Add your listing page to your website's navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
 
-```{r}
+```{r filename="_quarto.yml"}
 #| eval: false
 #| echo: true
 # ~ parts of `_quarto.yml` omitted for brevity ~
@@ -149,16 +156,18 @@ website:
     title: myWebsiteTitle
     right:
       - href: index.qmd
-        text: home
+        text: Home
       - about.qmd
       - posts.qmd # add your posts.qmd file to your navbar!
 ```
 
-6.  **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website (you can do either of these from the **Build** tab in RStudio. You should have something that looks like this (we haven't created any posts yet, so it'll be empty for now):
+6.  **Preview or Render your website:** Make sure your listing page shows up by previewing (I typically run `quarto preview` in the Terminal) or rendering (click the **Render** button in the **Build** tab in RStudio) your website. You should have something that looks like this (we haven't created any posts yet, so it'll be empty for now):
 
 ```{r}
 #| eval: true
 #| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
 knitr::include_graphics("media/blog-added.png")
 ```
 
